--- a/index-START.html
+++ b/index-START.html
@@ -2,206 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Videos</title>
+  <title>Speech Detection</title>
 </head>
 <body>
-  <ul class="videos">
-    <li data-time="5:43">
-      Video 1
-    </li>
-    <li data-time="2:33">
-      Video 2
-    </li>
-    <li data-time="3:45">
-      Video 3
-    </li>
-    <li data-time="0:47">
-      Video 4
-    </li>
-    <li data-time="5:21">
-      Video 5
-    </li>
-    <li data-time="6:56">
-      Video 6
-    </li>
-    <li data-time="3:46">
-      Video 7
-    </li>
-    <li data-time="5:25">
-      Video 8
-    </li>
-    <li data-time="3:14">
-      Video 9
-    </li>
-    <li data-time="3:31">
-      Video 10
-    </li>
-    <li data-time="5:59">
-      Video 11
-    </li>
-    <li data-time="3:07">
-      Video 12
-    </li>
-    <li data-time="11:29">
-      Video 13
-    </li>
-    <li data-time="8:57">
-      Video 14
-    </li>
-    <li data-time="5:49">
-      Video 15
-    </li>
-    <li data-time="5:52">
-      Video 16
-    </li>
-    <li data-time="5:50">
-      Video 17
-    </li>
-    <li data-time="9:13">
-      Video 18
-    </li>
-    <li data-time="11:51">
-      Video 19
-    </li>
-    <li data-time="7:58">
-      Video 20
-    </li>
-    <li data-time="4:40">
-      Video 21
-    </li>
-    <li data-time="4:45">
-      Video 22
-    </li>
-    <li data-time="6:46">
-      Video 23
-    </li>
-    <li data-time="7:24">
-      Video 24
-    </li>
-    <li data-time="7:12">
-      Video 25
-    </li>
-    <li data-time="5:23">
-      Video 26
-    </li>
-    <li data-time="3:34">
-      Video 27
-    </li>
-    <li data-time="8:22">
-      Video 28
-    </li>
-    <li data-time="5:17">
-      Video 29
-    </li>
-    <li data-time="3:10">
-      Video 30
-    </li>
-    <li data-time="4:43">
-      Video 31
-    </li>
-    <li data-time="19:43">
-      Video 32
-    </li>
-    <li data-time="0:47">
-      Video 33
-    </li>
-    <li data-time="0:47">
-      Video 34
-    </li>
-    <li data-time="3:14">
-      Video 35
-    </li>
-    <li data-time="3:59">
-      Video 36
-    </li>
-    <li data-time="2:43">
-      Video 37
-    </li>
-    <li data-time="4:17">
-      Video 38
-    </li>
-    <li data-time="6:56">
-      Video 39
-    </li>
-    <li data-time="3:05">
-      Video 40
-    </li>
-    <li data-time="2:06">
-      Video 41
-    </li>
-    <li data-time="1:59">
-      Video 42
-    </li>
-    <li data-time="1:49">
-      Video 43
-    </li>
-    <li data-time="3:36">
-      Video 44
-    </li>
-    <li data-time="7:10">
-      Video 45
-    </li>
-    <li data-time="3:44">
-      Video 46
-    </li>
-    <li data-time="3:44">
-      Video 47
-    </li>
-    <li data-time="4:36">
-      Video 48
-    </li>
-    <li data-time="3:16">
-      Video 49
-    </li>
-    <li data-time="1:10">
-      Video 50
-    </li>
-    <li data-time="6:10">
-      Video 51
-    </li>
-    <li data-time="2:14">
-      Video 52
-    </li>
-    <li data-time="3:44">
-      Video 53
-    </li>
-    <li data-time="5:05">
-      Video 54
-    </li>
-    <li data-time="6:03">
-      Video 55
-    </li>
-    <li data-time="12:39">
-      Video 56
-    </li>
-    <li data-time="1:56">
-      Video 57
-    </li>
-    <li data-time="4:04">
-      Video 58
-    </li>
-  </ul>
+
+  <div class="words" contenteditable>
+  </div>
+
 <script>
+  window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
-  const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
+  const recognition = new SpeechRecognition();
+  recognition.interimResults = true;
+  recognition.lang = 'en-US';
+  
+  let p = document.createElement('p');
+  const words = document.querySelector('.words');
+  words.appendChild(p);
 
-  const seconds = timeNodes
-    .map(node => node.dataset.time)
-    .map(timeCode => {
-      const [mins, secs] = timeCode.split(':').map(parseFloat);
-      return (mins * 60) + secs;
-    })
-    .reduce((total, vidSeconds) => total + vidSeconds);
+  recognition.addEventListener('result', e => {
+    const transcript = Array.from(e.results)
+      .map(result => result[0])
+      .map(result => result.transcript)
+      .join('');
 
-    let secondsLeft = seconds;
-    const hours = Math.floor(secondsLeft / 3600);
-    secondsLeft = secondsLeft % 3600;
+      const poopScript = transcript.replace(/poop|poo|shit|dump/gi, '💩');
+      p.textContent = poopScript;
 
-    const mins = Math.floor(secondsLeft / 60);
-    secondsLeft = secondsLeft % 60;
+      if (e.results[0].isFinal) {
+        p = document.createElement('p');
+        words.appendChild(p);
+      }
+  });
 
-    console.log(hours, mins, secondsLeft);
+  recognition.addEventListener('end', recognition.start);
+
+  recognition.start();
 
 </script>
+
+
+  <style>
+    html {
+      font-size: 10px;
+    }
+
+    body {
+      background: #ffc600;
+      font-family: 'helvetica neue';
+      font-weight: 200;
+      font-size: 20px;
+    }
+
+    .words {
+      max-width: 500px;
+      margin: 50px auto;
+      background: white;
+      border-radius: 5px;
+      box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
+      padding: 1rem 2rem 1rem 5rem;
+      background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
+      background-size: 100% 3rem;
+      position: relative;
+      line-height: 3rem;
+    }
+    
+    p {
+      margin: 0 0 3rem;
+    }
+
+    .words:before {
+      content: '';
+      position: absolute;
+      width: 4px;
+      top: 0;
+      left: 30px;
+      bottom: 0;
+      border: 1px solid;
+      border-color: transparent #efe4e4;
+    }
+  </style>
+
 </body>
 </html>
